Fix tabs not changedTick instead of modified/ Don't show hidden bufs/scrollbar on overflow (#626)
* Fix tabs not changedTick instead of modified

If one would modify a buffer then undo it, instead of changing from
isDirty to not dirty (tabline with the little circle) it would remain
dirty because ticks update even when undoing...

Therefore check for modified instead.

This would have caused furthur issues whenever we implement
requesting not close on dirty.

Issue(s) : #624

* Added back in version, change modified to boolean

* Don't show hidden/unlisted buffers in tabline

* Super simple scrollbar implementation for tabs

* Fix linting

--- a/browser/src/UI/components/Tabs.less
+++ b/browser/src/UI/components/Tabs.less
@@ -27,9 +27,11 @@
     align-items: flex-end;
 
     width: 100%;
-    height: 32px;
+    max-height: 48px;
+    min-height: 32px;
     color: #c8c8c8;
     background-color: rgba(0, 0, 0, 0.2);
+    overflow-x: auto;
 }
 
 .tab {
